@@ -9,6 +9,8 @@ Bug fixes:
 - fixed wrong security declaration (public) for MembershipTool.getFullnameFromId
 - #1433: Migration of users and groups from UserFolderWithGroups to
   CPSUserFolder
+- #1445: Provide migration of members folder content on old instances when
+  upgrading to CPS3.4.0
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Add language selector on the Front page
